css/jumbotron.css
/* Move down content because we have a fixed that is 50px tall */

body {
    padding-bottom: 20px;
    background: #151515;

    height: 100vh;
}

#main-description {
   text-align: center;
   font-size: 1.2em;
}
.jumbotron {
    background-image: url("https://donovankg.github.io/portfolio/assets/img/background.jpg");
    background-size: cover;
   color: #DABE83;
}
#owner {
   color: #DABE83;
   font-size: 2.0em;
   float: right;
}

#content-description {
   text-align: center;
   font-size: 1.2em;
}


.fa {
    font-size: 2.0em;
}

.box {
   height: 250px;
   background: #A63D40;
   border-radius: 8px;
   margin: 1em;
   width: 30%;
    padding:0 !important;
}
.baseBox{
    background-size: 100% 100%;
    position: absolute;
    height: 100%;
    width: 100%;
    opacity: .0;
}
.partOne{
    background-image: url("https://donovankg.github.io/portfolio/assets/img/ballons.png");

}

.selectFade{
    transition: opacity 0.3s;
    border-radius: 8px;
    -webkit-transition: opacity .5s ease-in-out;
}
.selectFade:hover{
    opacity: 1;
    color: #151515;
}


.partTwo{
    background-image: url("https://donovankg.github.io/portfolio/assets/img/sand.png");
}

.partThree{
     background-image: url("https://donovankg.github.io/portfolio/assets/img/notes-angular.png");
}
.partFour{
     background-image: url("https://donovankg.github.io/portfolio/assets/img/chart.png");
}
.partFive{
     background-image: url("https://donovankg.github.io/portfolio/assets/img/chat.png");
}
.iconBox{
    position: absolute;
    top: 5%;
    right: 5%;
}
h1, h2, p{
    color: #DABE83;
    padding: 10px;
}
i{
   color: #151515;
}
.setTitle{
    top: 70%;
    position: absolute;
}
footer{
    position: relative;
    left: 0;
    bottom: 0;
    height: 100px;
    width: 100%;
    background-color: #05154A;
    opacity: .4;
}

footer{
    position: fixed;
    height: 70px;
}
.main-title {
 margin: .5em auto;
}
@media screen and (max-width: 480px) {
    .setTitle{
        top: 60%;
    }
    .jumbotron{
        padding: 5px;
    }
    .jumbotron h1{
        margin-top: 5px;
    }
    .jumbotron p{
        font-size: 18px;
    }
    h1{
        font-size: 26px;
    }

}

